--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,46 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
+
+    <div class="banner-background header mt-4 p-5 bg-primary text-white rounded">
+      <h1>Finding and Tracking California Legislation</h1>
+      <p></p>
+    </div>
+
+    <% if flash[:alert].present? %>
+      <p class="my_alert"><%= flash[:alert] %></p>
+    <% end %>
+
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <div class="container-fluid mb-0">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Users
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'List Users', users_path, class: "dropdown-item" %></li>
+                <li><%= link_to 'New User', new_user_path, class: "dropdown-item" %></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Bills
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'List Bills', bills_path, class: "dropdown-item" %></li>
+                <li><%= link_to 'New Bill', new_bill_path, class: "dropdown-item" %></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
     <%= yield %>
+
   </body>
 </html>
