--- a/app/views/bills/new.html.erb
+++ b/app/views/bills/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Bills#new</h1>
-<p>Find me in app/views/bills/new.html.erb</p>
+<h1>New Bill</h1>
+
+<%= render 'form', bill: @bill %>
+
+<%= link_to 'Back to bills', bills_path, class: "btn btn-primary" %>
+
+
+
