--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -1,34 +1,59 @@
-<p id="notice"><%= notice %></p>
+<p 
+  style="color: green">
+  <%= notice %>
+</p>
 
 <h1>Bills</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <!-- <th>First name</th>
-      <th>Last name</th> -->
-
-      <!-- Additional Methods in the Customer Model Class -->
-      <th> Product ID</th>
-
-      <th>Product Count</th>
-
-      <th colspan="3"></th>
+      <th>
+        Bill ID
+      </th>
+      <th>
+        Measure
+      </th>
+      <th>
+        Subject
+      </th>
+      <th>
+        Author
+      </th>
+      <th>
+        Status
+      </th>
+      <th colspan="3">
+      </th>
     </tr>
   </thead>
   <tbody>
     <% @bills.each do |bill| %>
       <tr>
-
-        <td><%= bill.measure %></td>
-        <td><%= bill.subject %></td>
-        <td><%= bill.author %></td>
-        <td><%= bill.status %></td>
-
-        <td><%= link_to 'Show', bill %></td>
-        <td><%= link_to 'Edit', edit_bill_path(bill) %></td>
         <td>
-          <%= button_to('Destroy', bill, :method => :delete, :data => {:turbo_confirm => 'Delete for real?'}) %>
+        <i class="fas fa-bolt">
+          <%= bill.id %>
+        </td>
+        <td>
+          <%= bill.measure %>
+        </td>
+        <td>
+          <%= bill.subject %>
+        </td>
+        <td>
+          <%= bill.author %>
+        </td>
+        <td>
+          <%= bill.status %>
+        </td>
+        <td>
+          <%= link_to 'Show', bill, class: "btn btn-primary" %>
+        </td>
+        <td>
+          <%= link_to 'Edit', edit_bill_path(bill), class: "btn btn-primary" %>
+        </td>
+        <td>
+          <%= button_to('Destroy', bill, class: "btn btn-primary", :method => :delete, :data => {:turbo_confirm => 'Delete for real?'}) %>
         </td>
       </tr>
     <% end %>
@@ -42,7 +67,3 @@
 
 
 
-
-<%# substitute %>
-<!-- <h1>Bills#index</h1>
-<p>Find me in app/views/bills/index.html.erb</p> -->
