--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<p 
+  style="color: green">
+  <%= notice %>
+</p>
+
+<h1>Editing User</h1>
+
+<%= render "form", user: @user %>
+
+<br>
+
+<div>
+  <%= link_to "Show This User", @user, class: "btn btn-primary" %> |
+  <%= link_to "Back To Users", users_path, class: "btn btn-primary" %>
+</div>
