--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<div class="card shadow p-3 mb-5 bg-white rounded">
+<p>
+  <strong>First name:</strong>
+  <%= @user.first_name %>
+</p>
+
+<p>
+  <strong>Last name:</strong>
+  <%= @user.last_name %>
+</p>
+
+<p>
+  <strong>Category:</strong>
+  <%= @user.category %>
+</p>
+
+</div>
+
+<%= link_to 'Edit', edit_user_path(@user),  class: "btn btn-primary" %>
+<%= link_to 'Back', users_path, class: "btn btn-primary" %>
