--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,24 @@
                 <li><%= link_to 'New Bill', new_bill_path, class: "dropdown-item" %></li>
               </ul>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Measures
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Measures', measures_path, class: "dropdown-item" %></li>
+                <li><%= link_to 'Text', texts_path, class: "dropdown-item" %></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Text
+              </a>
+              <ul class="dropdown-menu">
+              <li><%= link_to 'Text', texts_path, class: "dropdown-item" %></li>
+              <li><%= link_to 'Measures', measures_path, class: "dropdown-item" %></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </nav>
