--- a/app/views/bills/new.html.erb
+++ b/app/views/bills/new.html.erb
@@ -2,7 +2,10 @@
 
 <%= render 'form', bill: @bill %>
 
-<%= link_to 'Back to bills', bills_path, class: "btn btn-primary" %>
+<br>
 
+<div>
+    <%= link_to 'Back to bills', bills_path, class: "btn btn-primary" %>
+</div>
 
 
