--- a/app/views/measures/index.html.erb
+++ b/app/views/measures/index.html.erb
@@ -6,114 +6,18 @@
 <h1>Measures</h1>
 
 <%= form_with url: measures_path, local: true, data: { turbo: false } do |f| %>
-  <div class="input-group mb-3">
-    <form accept-charset="utf-8">
-      <select>
-        <option>
-        -- Select Categories Code --
-        </option>
-        <option>
-            All
-        </option>
-        <option>
-          BPC - Business and Professions
-        </option>
-        <option>
-          CONS - California Constitution
-        </option>
-        <option>
-            CIV - Civil
-        </option>
-        <option>
-            CCP - Civil Procedure
-        </option>
-        <option>
-            CORP - Corporations
-        </option>
-        <option>
-            EDC - Education
-        </option>
-        <option>
-            ELEC - Elections
-        </option>
-        <option>
-            EVID - Evidence
-        </option>
-        <option>
-            FAM - Family
-        </option>
-        <option>
-            FIN - Financial
-        </option>
-        <option>
-            FGC - Fish and Game
-        </option>
-        <option>
-            FAC - Food and Agricultural
-        </option>
-        <option>
-            GOV - Government
-        </option>
-        <option>
-            HNC - Harbors and Navigation
-        </option>
-        <option>
-            HSC - Health and Safety
-        </option>
-        <option>
-            INS - Insurance
-        </option>
-        <option>
-            LAB - Labor
-        </option>
-        <option>
-            MVC - Military and Veterans
-        </option>
-        <option>
-            PEN - Penal
-        </option>
-        <option>
-            PROB - Probate
-        </option>
-        <option>
-            PCC - Public Contract
-        </option>
-        <option>
-            PRC - Public Resources
-        </option>
-        <option>
-            PUC - Public Utilities
-        </option>
-        <option>
-            RTC - Revenue and Taxation
-        </option>
-        <option>
-            SHC - Streets and Highways
-        </option>
-        <option>
-            UIC - Unemployment Insurance
-        </option>
-        <option>
-            VEH - Vehicle
-        </option>
-        <option>
-            WAT - Water
-        </option>
-        <option>
-            WIC - Welfare and Institutions
-        </option>
-      </select>
-  </div>
-  Enter Legislation Category:
-  <br>
+
+  <div class="dropdown">
+    <% f.label :name %><br>
+    <%= f.select :name, ['All', 'BPC','CONS','CIV', 'CCP', 'CORP', 'EDC', 'ELEC', 'EVID', 'FAM', 'FIN', 'FGC', 'FAC', 'GOV', 'HNC', 
+    'HSC', 'INS', 'LAB', 'MVC', 'PEN', 'PROB', 'PCC', 'PRC', 'PUC', 'RTC', 'SHC', 'UIC', 'VEH', 'WAT', 'WIC' ], :prompt => 'Choose A Category', style: "display: block" %>
   <div>
-    <% f.label :name, style: "display: block" %>
-    <%= f.text_field :name %> 
-  </div>
   <div>
     <%= f.submit :Submit, class: "btn btn-primary" %>
   </div>
 <% end %>
+
+<br>
 
 <table class="table">
   <thead>
