--- a/app/views/bills/new.html.erb
+++ b/app/views/bills/new.html.erb
@@ -5,7 +5,7 @@
 <br>
 
 <div>
-    <%= link_to 'Back to bills', bills_path, class: "btn btn-primary" %>
+    <%= link_to 'Back to bills', bills_path, class: "btn" %>
 </div>
 
 
