--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -21,5 +21,5 @@
 </p>
 
 <%= link_to 'Edit', edit_bill_path(@bill), class: "btn btn-primary" %> |
-<%= link_to 'Back', bills_path, class: "btn btn-primary" %>
+<%= link_to 'Back', bills_path, class: "btn" %>
 
