--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,7 +28,7 @@
     </div>
   
     <div>
-      <%= form.submit :Submit, class: "btn btn-primary" %>
+      <%= form.submit :Submit, class: "btn btn-warning" %>
     </div>
   <% end %>
   
