--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -19,7 +19,11 @@
 
 <br>
 
+
   <table class="table table-warning">
+    <h5>Results for 
+      <%= params[:name] %>:
+    </h5>
     <thead>
       <tr>
         <th>
