--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,16 @@
               <li><%= link_to 'Measures', measures_path, class: "dropdown-item" %></li>
               </ul>
             </li>
+            <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Chabot
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Chatbot', chatgpt_path, class: "dropdown-item" %></li>
+              <li><%= link_to 'Measures', measures_path, class: "dropdown-item" %></li>
+              <li><%= link_to 'Text', texts_path, class: "dropdown-item" %></li>
+            </ul>
+          </li>
           </ul>
         </div>
       </nav>
